--- a/PRN221_GroupProjectBookParty/PRN221_GroupProjectBookParty/Pages/Authentication/Login.cshtml
+++ b/PRN221_GroupProjectBookParty/PRN221_GroupProjectBookParty/Pages/Authentication/Login.cshtml
@@ -87,7 +87,7 @@
                         @TempData["ErrorMessage"]
                     </div>
                 }
-                <a href="#">Forget Your Password?</a>
+                <a href="/Guest/PartyView">Go to home</a>
                 <button>Sign In</button>
             </form>
         </div>
