--- a/PRN221_GroupProjectBookParty/PRN221_GroupProjectBookParty/Pages/Layout/_LayoutHost.cshtml
+++ b/PRN221_GroupProjectBookParty/PRN221_GroupProjectBookParty/Pages/Layout/_LayoutHost.cshtml
@@ -136,7 +136,7 @@
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="/Host/HostBooking" class="menu-link">
+                            <a href="/Host/HostBooking/Index" class="menu-link">
                                 <i class="menu-icon fa-solid fa-clipboard-list"></i>
                                 <div data-i18n="Layouts">List Booking</div>
                             </a>
