--- a/PRN221_GroupProjectBookParty/PRN221_GroupProjectBookParty/Pages/Host/HostBooking/List.cshtml
+++ b/PRN221_GroupProjectBookParty/PRN221_GroupProjectBookParty/Pages/Host/HostBooking/List.cshtml
@@ -4,8 +4,8 @@
 @{
     ViewData["Title"] = "Host - Manage Booking";
     Layout = "/Pages/Layout/_LayoutHost.cshtml";
-    var finish = BookingStatus.IsActive;
 }
+<partial name="_Notification" />
 <body>
     <div class="content-wrapper">
         <div class="container-xxl flex-grow-1 container-p-y ">
@@ -16,8 +16,11 @@
                     <div>Booking</div>
                     <!-- Button trigger modal -->
                 </h5>
+                <div>
+                    <span style="color: red; font-weight: bold" >@TempData["ErrorFinish"]</span>
+                </div>
                 <form method="post">
-
+                   
                 <div class="table-responsive text-nowrap">
                    
                         <table id="myTable" class="table">
@@ -31,7 +34,6 @@
                                     <th>Inquiry</th>
                                     <th>Start Date</th>
                                     <th>Status</th>
-                                    <th>Finished</th>
                                     <th style="text-align:center">Action</th>
                                 </tr>
                             </thead>
@@ -63,35 +65,35 @@
                                             @Html.DisplayFor(modelItem => item.StartDate)
                                         </td>
                                         <td>
-                                            @if (item.Status == false)
+                                            @if (item.Status.Equals("Not Approved"))
                                             {
-                                                <span style="color: red; font-weight: bold">Đang chờ duyệt</span>
+                                                <span style="color: red; font-weight: bold">Waiting To Approved</span>
                                             }
-                                            else if (item.Status == true)
+                                            else if (item.Status.Equals("Approved"))
                                             {
-                                                <span style="color: green; font-weight: bold">Đã được duyệt</span>
+                                                <span style="color: green; font-weight: bold"> @item.Status</span>
                                             }
-                                        </td>
-                                        <td>
-                                            @if(finish.Equals("Finish"))
+                                            else if (item.Status.Equals("Finish"))
                                             {
-                                                <span style="color: firebrick; font-weight: bold">Finished</span>
-                                            }
-                                            else if (finish.Equals("Paid"))
-                                            {
-                                                <span style="color: coral; font-weight: bold">Paid</span>
+                                                <span style="color: firebrick; font-weight: bold"> @item.Status</span>
                                             }
                                             else
                                             {
-                                                <span style="color: green; font-weight: bold">Not Paid</span>
+                                                <span style="color: coral; font-weight: bold"> @item.Status</span>
                                             }
                                         </td>
+                                       
 
                                         <td>
-                                            <button type="submit" asp-route-id="@item.Id" asp-page-handler="Confirm">Confirm</button> |
-                                            <button type="submit" asp-route-id="@item.Id" asp-page-handler="Cancel">Cancel</button> |
-                                            <button type="submit" asp-route-id="@item.Id" asp-page-handler="Finish">Finish</button>
-
+                                            @if (item.Status.Equals("Not Approved"))
+                                            {
+                                                <button type="submit" asp-route-id="@item.Id" asp-page-handler="Confirm">Confirm</button> 
+                                                <button type="submit" asp-route-id="@item.Id" asp-page-handler="Cancel">Cancel</button> 
+                                            }
+                                            @if (item.Status.Equals("Approved") || item.Status.Equals("Paid"))
+                                            {
+                                                <button type="submit" asp-route-id="@item.Id" asp-page-handler="Finish">Finish</button>
+                                            }
                                         </td>
 
                                     </tr>
